# AI-showcase

./: .gitignore  LICENSE  Readme.md  requirements.txt
ai-data-quality-copilot/: .gitignore  Makefile  README.md  pyproject.toml
ai-data-quality-copilot/data/synthetic/: customers.csv  generate_data.py
ai-data-quality-copilot/src/dqcopilot/: cli.py  profiling.py  report.py  rules.py  score.py
ai-data-quality-copilot/src/dqcopilot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vector-embedding-export/AI-showcase/vector-embedding/: README.md  embeddings.py  run_example.py  similarity.py  vector_store.py
