[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dqcopilot"
version = "0.1.0"
description = "AI Data Quality Copilot showcase"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "jinja2>=3.1",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
dqcopilot = "dqcopilot.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
